k8s-resources/jenkins/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - jenkins.apps.k8s-kops-test.integration.dsd.io
    secretName: analytics-jenkins-tls
  rules:
  - host: jenkins.apps.k8s-kops-test.integration.dsd.io
    http:
      paths:
      - backend:
          serviceName: analytics-jenkins
          servicePort: 8080
        path: /
